@@ -67,13 +67,14 @@ files.
 }
 }
 
-\code{\link{runGdal}} uses a lot of \strong{MODIS} package functions, see in 
-section Arguments and Methods the respective '?function' for details and 
-inputs.\cr
+\code{\link{runGdal}} uses numerous \strong{MODIS} functions under the hood, 
+see the linked functions in 'Arguments' for details and inputs.\cr
+
 If \code{extent} is a \code{Raster*} object, the output has exactly the same 
 extent, pixel size, and projection.\cr
-If \code{extent} is a \strong{sp} object (i.e., polygon shapefile), the 
-output has exactly the same extent and projection.\cr
+If \code{extent} is a \strong{sp} or \strong{sf} object, the 
+output has exactly the same extent and projection except for point geometries 
+where only the projection is inherited.\cr
 If \code{tileH} and \code{tileV} are used (instead of \code{extent}) to 
 define the area of interest, and \code{outProj} and \code{pixelSize} are 
 \code{'asIn'}, the result is only converted from multilayer-HDF to 
