@@ -1,5 +1,9 @@
 MODIS 1.1.4
 
+New features: 
+
+  * getTile() supports single-point geometries from 'sp' and 'sf'.
+
 Changes:
 
   * When running getHdf() (or runGdal()) with LP DAAC or NSIDC as target download server and Earthdata login credentials in ~/.netrc are missing, the user is forced to insert the required information on the command line. This is intended to avoid repeat authentication failures.
